<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_margin="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center"
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp" />
                <TextView
                    android:id="@+id/tv_deceive_name"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/deceive_name"
                    android:layout_width="0dp"
                    android:layout_height="30dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center"
                    android:text="@string/mac"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp" />
                <TextView
                    android:id="@+id/tv_mac_address"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/mac_address"
                    android:layout_width="0dp"
                    android:layout_height="30dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="60dp">
            <TextView
                android:textStyle="italic"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/status"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
            <TextView
                android:id="@+id/tv_status"
                android:text="@string/none_status"
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lc_chart"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:textStyle="bold|italic"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/sp02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_spo2"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/chi_so_sp02"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:textStyle="bold|italic"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_heart_rate"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/chi_so_hr"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>