<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".ScanDeceiveActivity">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="NestedWeights">
            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/paired_deceive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lv_paired_deceive_list"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="NestedWeights">
            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/scan_deceive_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/lv_scan_deceive_list"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_scan"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#0752F4"
        android:text="@string/scan_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        tools:ignore="UnknownId"
        android:enabled="true"/>

</LinearLayout>